fix dark mode dropdown items with links

--- a/src/client/styles.body.dark.scss
+++ b/src/client/styles.body.dark.scss
@@ -78,6 +78,7 @@ body {
     color: $window-placeholder-color !important;
 
     .dropdown-item {
+      color: inherit !important;
 
       &:active, &:hover {
         background-color: lighten($window-background-color, 20%);
